manifests/base/resources/data-connections/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: data-connections
    chart: data-connections-1.7.8
    heritage: Helm
    release: data-connections
  name: data-connections
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-connections
      release: data-connections
  template:
    metadata:
      labels:
        app: data-connections
        data-connections-nats-client: "true"
        release: data-connections
    spec:
      containers:
        - env:
            - name: MONGODB_URI
              valueFrom:
                secretKeyRef:
                  key: mongodbUri
                  name: data-connections-secrets
            - name: MONGO_URI
              value: $(MONGODB_URI)
            - name: KEYS_URI
              valueFrom:
                configMapKeyRef:
                  key: keysUri
                  name: data-connections-configs
            - name: JWKS_URI
              value: $(KEYS_URI)/v1/keys/qlik.api.internal
            - name: NATS_STREAMING_CLUSTER_ID
              valueFrom:
                configMapKeyRef:
                  key: natsStreamingClusterId
                  name: data-connections-configs
            - name: NATS_CLUSTER_ID
              value: $(NATS_STREAMING_CLUSTER_ID)
            - name: NATS_URI
              valueFrom:
                configMapKeyRef:
                  key: natsUri
                  name: data-connections-configs
            - name: NATS_ADDR
              value: $(NATS_URI)
            - name: TOKEN_AUTH_PRIVATE_KEY_ID
              valueFrom:
                secretKeyRef:
                  key: tokenAuthPrivateKeyId
                  name: data-connections-secrets
            - name: KEY_ID
              value: $(TOKEN_AUTH_PRIVATE_KEY_ID)
            - name: EDGE_AUTH_URI
              valueFrom:
                configMapKeyRef:
                  key: edgeAuthUri
                  name: data-connections-configs
            - name: AUTH_URI
              value: $(EDGE_AUTH_URI)
            - name: FEATURE_FLAGS_URI
              valueFrom:
                configMapKeyRef:
                  key: featureFlagsUri
                  name: data-connections-configs
            - name: FEATURE_FLAG_ADDR
              value: $(FEATURE_FLAGS_URI)
            - name: QIX_DATA_FILES_URI
              valueFrom:
                configMapKeyRef:
                  key: qixDataFilesUri
                  name: data-connections-configs
            - name: DATAFILES_URI
              value: $(QIX_DATA_FILES_URI)
            - name: SPACES_URI
              valueFrom:
                configMapKeyRef:
                  key: spacesUri
                  name: data-connections-configs
            - name: SPACE_URI
              value: $(SPACES_URI)
            - name: ENCRYPTION_URI
              valueFrom:
                configMapKeyRef:
                  key: encryptionUri
                  name: data-connections-configs
            - name: E2S_ADDR
              value: $(ENCRYPTION_URI)
            - name: POLICY_DECISIONS_URI
              valueFrom:
                configMapKeyRef:
                  key: policyDecisionsUri
                  name: data-connections-configs
            - name: PDS_ADDR
              value: $(POLICY_DECISIONS_URI)
            - name: DATA_CONNECTOR_NFS_URI
              valueFrom:
                configMapKeyRef:
                  key: dataConnectorNfsUri
                  name: data-connections-configs
            - name: NFS_ADDR
              value: $(DATA_CONNECTOR_NFS_URI)
            - name: BYPASS_QUERY
              value: Qlik123456
            - name: ENABLE_CRYPTO
              value: "false"
            - name: ENABLE_JWT_AUTH
              value: "true"
            - name: ENABLE_INDEX_BUILD
              value: dataconnections:true,datacredentials:true,credmapping:true
            - name: PRIVATE_KEY
              value: /mnt/key/jwtPrivateKey
            - name: LOG_LEVEL
              value: info
            - name: NATS_ENABLED
              value: "true"
          image: qliktech-docker.jfrog.io/data-connections:0.6.2
          imagePullPolicy: null
          livenessProbe:
            httpGet:
              path: /health
              port: 9011
          name: main
          ports:
            - containerPort: 9011
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /mnt/key
              name: dc-storage
              readOnly: true
      imagePullSecrets:
        - name: artifactory-docker-secret
      volumes:
        - name: dc-storage
          secret:
            defaultMode: 420
            items:
              - key: tokenAuthPrivateKey
                path: jwtPrivateKey
            secretName: data-connections-secrets
---
